--- a/package.json
+++ b/package.json
@@ -1,48 +1,53 @@
 {
-  "name": "my_midway_project",
+  "name": "my-midway-project",
   "version": "1.0.0",
   "description": "",
   "private": true,
   "dependencies": {
     "@midwayjs/bootstrap": "^2.5.2",
     "@midwayjs/decorator": "^2.3.0",
+    "@midwayjs/koa": "^2.3.0",
     "@midwayjs/orm": "^1.3.0",
     "@midwayjs/web": "^2.3.0",
-    "egg": "^2.0.0",
-    "egg-scripts": "^2.10.0",
-    "sqlite3": "^5.0.0"
+    "fast-xml-parser": "^3.19.0",
+    "koa-bodyparser": "^4.3.0",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@midwayjs/cli": "^1.0.0",
-    "@midwayjs/egg-ts-helper": "^1.0.1",
+    "@midwayjs/luckyeye": "^1.0.0",
     "@midwayjs/mock": "^2.3.0",
     "@types/jest": "^26.0.10",
     "@types/node": "14",
     "cross-env": "^6.0.0",
-    "mwts": "^1.0.5",
     "jest": "^26.4.0",
+    "mwts": "^1.0.5",
     "ts-jest": "^26.2.0",
-    "typescript": "^3.9.0"
+    "typescript": "^4.0.0"
   },
   "engines": {
     "node": ">=12.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=midway-server-my_midway_project --framework=@midwayjs/web",
-    "stop": "egg-scripts stop --title=midway-server-my_midway_project",
-    "start_build": "npm run build && cross-env NODE_ENV=development midway-bin dev",
-    "dev": "cross-env ets && cross-env NODE_ENV=local midway-bin dev --ts",
-    "test": "midway-bin test",
-    "cov": "midway-bin cov",
+    "start": "NODE_ENV=production node ./bootstrap.js",
+    "dev": "cross-env NODE_ENV=local midway-bin dev --ts",
+    "test": "midway-bin test --ts",
+    "cov": "midway-bin cov --ts",
     "lint": "mwts check",
     "lint:fix": "mwts fix",
     "ci": "npm run cov",
-    "build": "midway-bin build -c"
+    "build": "midway-bin build -c",
+    "check": "luckyeye"
   },
   "midway-bin-clean": [
     ".vscode/.tsbuildinfo",
     "dist"
   ],
+  "midway-luckyeye": {
+    "packages": [
+      "midway_v2"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": ""
