--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "dependencies": {
     "@midwayjs/bootstrap": "^2.5.2",
     "@midwayjs/decorator": "^2.3.0",
-    "@midwayjs/koa": "^2.3.0",
-    "@midwayjs/orm": "^1.3.0",
+    "@midwayjs/orm": "^2.14.0",
     "@midwayjs/web": "^2.3.0",
-    "fast-xml-parser": "^3.19.0",
-    "koa-bodyparser": "^4.3.0",
-    "sqlite3": "^5.0.2"
+    "egg": "^2.0.0",
+    "egg-scripts": "^2.10.0",
+    "sqlite3": "^5.0.0",
+    "typeorm": "^0.2.41"
   },
   "devDependencies": {
     "@midwayjs/cli": "^1.0.0",
