--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@midwayjs/web": "^2.3.0",
     "egg": "^2.0.0",
     "egg-scripts": "^2.10.0",
+    "koa-session": "^6.2.0",
     "sqlite3": "^5.0.0",
     "typeorm": "^0.2.41"
   },
