--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "private": true,
   "dependencies": {
-    "@midwayjs/bootstrap": "^2.3.0",
-    "@midwayjs/core": "^2.3.0",
-    "@midwayjs/decorator": "^2.3.0",
-    "@midwayjs/koa": "^2.3.0",
-    "@midwayjs/orm": "^2.14.0",
+    "@midwayjs/bootstrap": "^3.0.0",
+    "@midwayjs/core": "^3.0.0",
+    "@midwayjs/decorator": "^3.0.0",
+    "@midwayjs/koa": "^3.0.0",
+    "@midwayjs/orm": "^3.0.0",
     "fast-xml-parser": "^3.21.1",
     "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.3.0",
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@midwayjs/cli": "^1.0.0",
     "@midwayjs/luckyeye": "^1.0.0",
-    "@midwayjs/mock": "^2.3.0",
+    "@midwayjs/mock": "^3.0.0",
     "@types/jest": "^26.0.10",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/node": "14",
@@ -28,7 +28,8 @@
     "jest": "^26.4.0",
     "mwts": "^1.0.5",
     "ts-jest": "^26.2.0",
-    "typescript": "^4.0.0"
+    "typescript": "^4.0.0",
+    "ts-node": "^9.0.0"
   },
   "engines": {
     "node": ">=12.0.0"
