--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "lint:fix": "mwts fix",
     "ci": "npm run cov",
     "build": "midway-bin build -c",
-    "check": "luckyeye"
+    "check": "luckyeye",
+    "preinstall": "npx only-allow pnpm"
   },
   "midway-bin-clean": [
     ".vscode/.tsbuildinfo",
